<resources>
    <string name="app_name">Letterly</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="del">⌫</string>
    <string name="classic">Classic</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>
    <string name="choose_difficulty">Choose your difficulty</string>
    <string name="game_mode_subtitle">%1$d letters · %2$d guesses</string>
    <string name="leave_game_title">Leave game?</string>
    <string name="leave_game_message">Your current game will be lost. Do you want to go back?</string>
    <string name="leave_button">Leave</string>
    <string name="stay_button">Stay</string>
    <string name="game_won_title">You won! 🎉</string>
    <string name="game_lost_title">You lost! 😢</string>
    <string name="game_lost_message">The word was: %1$s\nPlay again?</string>
    <string name="play_again_message">Play again?</string>
    <string name="replay_button">Replay</string>
    <string name="back_button">Back</string>
    <string name="word_not_in_dictionary">Word not in dictionary</string>
    <string name="word_already_guessed">Word has already been guessed</string>
    <string name="hint_button">💡 Hint</string>
    <string name="hint_count">x%1$d</string>
    <string name="hint_label">Hint %1$d</string>
    <string name="get_next_hint">Get Next Hint</string>
    <string name="close">Close</string>
    <string name="hint_dialog_title">Hint</string>
    <string name="hint_error">Could not load hint. Try again.</string>
    <string name="no_internet">No internet connection</string>
</resources>